[package]
name = "rdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
use = "0.0.1-pre.0"
